<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                               xmlns:app="http://schemas.android.com/apk/res-auto"
                                               android:layout_width="match_parent"
                                               android:layout_height="match_parent"
                                               android:background="@drawable/background1"
                                               android:orientation="vertical">

    <ImageView
        android:id="@id/back_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/iv_back"
        android:contentDescription="@string/default_img_desc"
        app:layout_aspectRatio="@fraction/same_ratio"
        app:layout_marginLeftPercent="5%"
        app:layout_marginTopPercent="5%"
        app:layout_widthPercent="8%"
        />

    <TextView
        android:id="@+id/tv_check_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/check_update"
        android:textSize="@dimen/text_20"
        app:layout_marginRightPercent="5%"
        app:layout_marginTopPercent="5%"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/space_100"
        android:layout_marginRight="@dimen/space_100"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/textViewVersionInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="@dimen/text_24"/>

        <TextView
            android:id="@+id/textViewVersionDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewVersionInfo"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/version_desc"
            android:textSize="@dimen/text_21"/>


    </RelativeLayout>

    <TextView
        android:id="@+id/textViewCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:gravity="center_horizontal"
        android:text="@string/version_code_desc"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/textViewCode"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/default_img_desc"
        android:src="@drawable/wechat"
        app:layout_heightPercent="40%"
        app:layout_marginTopPercent="40%"/>
</android.support.percent.PercentRelativeLayout>