<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/space_10"
                android:paddingTop="@dimen/space_10"
    >

    <TextView
        android:id="@+id/tv_device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_20"
        android:layout_marginStart="@dimen/space_20"
        android:textColor="@color/color_ccc"
        android:textSize="@dimen/text_17"/>

    <TextView
        android:id="@+id/tv_device_whid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_device_name"
        android:layout_marginLeft="@dimen/space_20"
        android:layout_marginStart="@dimen/space_20"
        android:layout_marginTop="@dimen/space_5"
        android:textColor="@color/color_ccc"
        android:textSize="@dimen/text_17"/>

    <Button
        android:id="@+id/btn_device_inspect"
        android:layout_width="@dimen/space_70"
        android:layout_height="@dimen/space_40"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@drawable/selector_btn_frame"
        android:text="@string/check_cycle"
        android:textColor="@color/color_ccc"
        android:textSize="@dimen/text_17"/>

    <TextView
        android:id="@+id/tv_device_state_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="50dp"
        android:layout_toLeftOf="@id/btn_device_inspect"
        android:drawableLeft="@drawable/icon_device_state_normal"
        android:drawablePadding="5dp"
        android:text="@string/device_state_normal"
        android:gravity="center_vertical"
        android:textColor="@color/color_ccc"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/tv_device_state_abnormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="50dp"
        android:layout_toLeftOf="@id/btn_device_inspect"
        android:drawableLeft="@drawable/icon_device_state_abnormal"
        android:drawablePadding="5dp"
        android:text="@string/device_state_abnormal"
        android:gravity="center_vertical"
        android:textColor="@color/color_ccc"
        android:visibility="invisible"/>


</RelativeLayout>
