<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1">


    <ImageView
        android:id="@id/back_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/iv_back"
        android:contentDescription="@string/default_img_desc"
        app:layout_aspectRatio="@fraction/same_ratio"
        app:layout_marginLeftPercent="5%"
        app:layout_marginTopPercent="5%"
        app:layout_widthPercent="8%" />

    <ImageView
        android:id="@+id/iv_double_switch_state"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/all_close"
        android:contentDescription="@string/default_img_desc"
        app:layout_aspectRatio="@fraction/same_ratio"
        app:layout_marginTopPercent="20%"
        app:layout_widthPercent="22%" />

    <com.jinxin.jxtouchscreen.widget.PercentLinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        app:layout_heightPercent="40%"
        app:layout_marginBottomPercent="5%"
        app:layout_marginLeftPercent="33%"
        app:layout_widthPercent="12%">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_left"
            android:textColor="@color/white"
            android:textSize="@dimen/text_24"
            app:layout_marginTopPercent="20%" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_marginTopPercent="10%">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open"
                android:textSize="@dimen/text_18" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/close"
                android:textSize="@dimen/text_18" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/iv_double_switch_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/double_switch_selector"
            android:clickable="true"
            android:contentDescription="@string/default_img_desc"
            app:layout_heightPercent="17.5%"
            app:layout_marginTopPercent="10%"
            app:layout_widthPercent="98%" />
    </com.jinxin.jxtouchscreen.widget.PercentLinearLayout>

    <com.jinxin.jxtouchscreen.widget.PercentLinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        app:layout_heightPercent="40%"
        app:layout_marginBottomPercent="5%"
        app:layout_marginLeftPercent="60%"
        app:layout_widthPercent="12%">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_right"
            android:textColor="@color/white"
            android:textSize="@dimen/text_24"
            app:layout_marginTopPercent="20%" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_marginTopPercent="10%">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open"
                android:textSize="@dimen/text_18" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/close"
                android:textSize="@dimen/text_18" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/iv_double_switch_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/double_switch_selector"
            android:clickable="true"
            android:contentDescription="@string/default_img_desc"
            app:layout_heightPercent="17.5%"
            app:layout_marginTopPercent="10%"
            app:layout_widthPercent="98%" />
    </com.jinxin.jxtouchscreen.widget.PercentLinearLayout>
</android.support.percent.PercentRelativeLayout>
